# OpenGL-with-Rust

./: Cargo.toml  README.md
assets/shaders/learning_textures/: default.frag
assets/shaders/learning_transformations/: default.vert
src/: lib.rs  macros.rs  shader.rs  texture.rs
src/lib/: gl_err_handeling.rs  lib.rs  shader.rs  window.rs
src/lib/shader_data/: index.rs  vertex_array.rs
src/shader_data/: buffer.rs  vertex.rs
